[package]
name = "alvarium-cli"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"
description = "A command line interface for mining the Alvarium Ore Pool on Solana!"
documentation = "https://github.com/Bifrost-Technologies/ore-pool-miner"
homepage = "https://github.com/Bifrost-Technologies/ore-pool-miner"
repository = "https://github.com/Bifrost-Technologies/ore-pool-miner"
readme = "./README.md"
keywords = ["solana", "ore", "pool", "crypto", "mining"]

[[bin]]
name = "alvarium"
path = "src/main.rs"


[features]
default = []
admin = []

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = "1.16"
cached = "0.46.1"
chrono = "0.4.38"
clap = { version = "4.4.12", features = ["derive"] }
colored = "2.0"
drillx = "2.0.0"
futures = "0.3.30"
log = "0.4"
num_cpus = "1.16.0"
ore-api = "2.1.0"
ore-utils = "2.1.0"
rand = "0.8.4"
reqwest = "0.11"
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
  "no-entrypoint",
] }
tokio = "1.35.1"

# [patch.crates-io]
# drillx = { path = "../drillx/drillx" }
# ore-api = { path = "../ore/api" }
# ore-utils = { path = "../ore/utils" }

